--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^0.2.31",
     "@nuxt/typescript-runtime": "^2.0.0",
+    "aws-amplify": "^3.3.12",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
