--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@aws-amplify/ui-vue": "^0.2.31",
     "@nuxt/typescript-runtime": "^2.0.0",
     "aws-amplify": "^3.3.12",
-    "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
@@ -27,8 +26,11 @@
     "@nuxtjs/vuetify": "^1.11.2",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
+    "babel": "^5.8.23",
+    "babel-loader": "^5.3.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
+    "core-js": "^3.8.1",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
